basic options parsing
* Copied GetOpt and altered it to allow unknown options to flow through
  instead of signaling an error.
* Implemented parsing of all the flags
* No parsing of commands yet
* Broke up test suite a bit
* Enumerated commands

20040429090446-6d90f-fba53281a3ee9b3e728e2d4d7a7c947bf9fb534b.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -13,7 +13,8 @@
 ** read & write config-droppings
 
 * Testing
-** Parsing of command-lint opts
+** testing of altered version of getopt
+** Parsing of command-line opts
 ** passing unknown options through.
 ** reading & writing configuration-dropping
 
