command parsing, changed packageinfo
20040429102803-6d90f-23fa820c3102b5b8a58df7fdc5bad7d561626f70.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -4,13 +4,16 @@
 
 * Code
 ** Version (simonMar)
-** command-line parser (isaac)
+** configure step
 ** cross-platform compiler location(simonmar?)
 ** build
 ** install
 ** register
 ** generate InstalledPackageInfo
 ** read & write config-droppings
+
+* later todo
+** command-line parsing errors
 
 * Testing
 ** testing of altered version of getopt
