parsed ConfigFlags, some code cleanup
20040429111822-6d90f-bf8f1c7bca937c24b2828ed6c65a65f1d0d9fd5e.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -6,6 +6,7 @@
 ** Version (simonMar)
 ** configure step
 ** cross-platform compiler location(simonmar?)
+** help action without command... help command?
 ** build
 ** install
 ** register
@@ -16,9 +17,7 @@
 ** command-line parsing errors
 
 * Testing
-** testing of altered version of getopt
-** Parsing of command-line opts
-** passing unknown options through.
+** error cases for parsing command-line args
 ** reading & writing configuration-dropping
 
 ** use-cases based on SimonPJ's doc
