implementation of configure that works for GHC on simon 's machine
20040429142609-3ed52-9a7af1a491e71df1947f05e33dfa044a90f3b13b.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -3,9 +3,9 @@
 ** x-pkg command-line interface
 
 * Code
+** make "configure" more verbose
 ** configure step
 ** cross-platform compiler location(simonmar?)
-** help action without command... help command?
 ** build
 ** install
 ** register
@@ -14,6 +14,7 @@
 
 * later todo
 ** command-line parsing errors
+** elaborate command-line help text
 
 * Testing
 ** error cases for parsing command-line args
