Move utils to D.S.Utils, setup droppings, basic impl. of Setup
20040429145733-3ed52-c5dcad494f6aa5e24a272e461e228872bd4969b8.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -4,8 +4,6 @@
 
 * Code
 ** make "configure" more verbose
-** configure step
-** cross-platform compiler location(simonmar?)
 ** build
 ** install
 ** register
@@ -13,6 +11,7 @@
 ** read & write config-droppings
 
 * later todo
+** writePersistBuildConfig robustify + diagnostics
 ** command-line parsing errors
 ** elaborate command-line help text
 
