Add stubs for all commands, various other updates
20040521142428-3ed52-fca3d5304de2fc6c4ab22fc3b459b8e64d14d84f.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,17 +1,14 @@
-* Documentation
-** Integrate SimonPJ's document into the "proposal" (simonpj)
-** x-pkg command-line interface
-
 * Code
+** parse pkg.desc
 ** build
 ** install
 ** register
 ** generate InstalledPackageInfo
 ** read & write config-droppings
+** configure: check for presence of build dependencies
 
 * later todo
 ** writePersistBuildConfig robustify + diagnostics
-** command-line parsing errors
 ** elaborate command-line help text
 
 * Testing
