--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -10,6 +10,8 @@
 * later todo
 ** writePersistBuildConfig robustify + diagnostics
 ** elaborate command-line help text
+** configure should check for 'ar' args + properties (see fptools/aclocal.m4)
+** most commands should accept a -v flag to show command lines?
 
 * Testing
 ** error cases for parsing command-line args
