Fixes to building, build C bits too
20040521154707-3ed52-ccb2caabc94fc8bb97bd3f0edaebe8de6fb121b1.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -12,6 +12,7 @@
 ** elaborate command-line help text
 ** configure should check for 'ar' args + properties (see fptools/aclocal.m4)
 ** most commands should accept a -v flag to show command lines?
+** configure should check sanity of PackageDescription, eg. library /= "" ?
 
 * Testing
 ** error cases for parsing command-line args
