install-prefix and friends
* enumerated some imports
* used --install-prefix flag
* implemented conditional register at install time
** breaks install for two reasons:
1) install will try to register
2) register is broken
* Register is broken for three reasons:
1) --user and --system aren't implemented
2) install doesn't put the files in the right place (prefix/lib/package-version)
3) install doesn't put the .hi and .o files in the right place.

But you can still use install-prefix to test.

20040606232915-6d90f-409b2d04421e7eb98fe8e6906758d0564be58e19.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -14,10 +14,15 @@
 
 ** grep for "FIX".
 
+** Get function from hmake that creates a directory based on arch.
+
 ** register
 ** generate InstalledPackageInfo
 ** read & write config-droppings
 ** configure: check for presence of build dependencies
+
+** ./Setup test
+- this may be something that's easy to break off and give to someone else.
 
 * later todo
 ** writePersistBuildConfig robustify + diagnostics
