parsing for --user and --global flags
* implemented --user and --global parsing for Install and Register commands
* But but register still doesn't actually pay attention.


20040607004449-6d90f-19d3e807b94225dd5c00b3e0a067964eb2a312d8.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -9,12 +9,15 @@
    something to indicate all haskell modules under that?
 
 ** SDist for windows machines, or machines without tar.
-** Better way to find 'tar'; is there a library?
+*** Better way to find 'tar'; is there a library?
+
 ** sign flag?
 
 ** grep for "FIX".
 
 ** Get function from hmake that creates a directory based on arch.
+
+** clean up Setup parsing code.
 
 ** register
 ** generate InstalledPackageInfo
