respects --user flag
** made register command respect --user flag
** changed install to put the sources in the place that register
   expects it, though I'm not sure if it's exactly right.


20040607010802-6d90f-80e3c85d80b746cebacee2e080cef0e7901e08a4.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,7 +1,9 @@
 * Code
+** Write top-level Setup test cases (like "make check" under the test directory)
+
 ** Extensions -> flags interface
 
-** parse pkg.desc
+** parse Setup.description
 ** build (for NHC and Hugs)
 ** install (for GHC and NHC) - look for .o and .hi, register, etc
 
@@ -20,8 +22,8 @@
 ** clean up Setup parsing code.
 
 ** register
-** generate InstalledPackageInfo
-** read & write config-droppings
+*** for hugs & nhc
+
 ** configure: check for presence of build dependencies
 
 ** ./Setup test
