--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,4 +1,4 @@
-* euroHaskell
+* misc
 ** setup test suite to run on --push?
 ** Possibly create a (native?) zib library?
 ** port code to windows
@@ -6,11 +6,13 @@
 ** ./Setup.lhs build for nhc
 ** nhc-pkg (see old package manager code)
 ** hugs-pkg
-** make -Wall clean
 ** better command-line parsing interface
 ** ./Setup.lhs bdist
 
 * Code
+** FIX: install currently moves .hs, .hi, and .o files for any target.
+   make it do the right thing for hugs (just move .hs) and {g,n}hc
+   (move .hi and .o)
 ** Write top-level Setup test cases (like "make check" under the test directory)
 
 ** Extensions -> flags interface
