integrated some changes from bringert (separate install for Hugs and GHC)
** more tests for install hugs and ghc
** test --install-prefix
** checked return codes for more operations
** broke Install targets into separate functions for GHC and Hugs
** started using pathJoin and copyFile
** still more integration to go.

20040613190420-6d90f-cd89fd49852a3a19bc5068af838949e033a0562c.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,15 +1,25 @@
+* Quick
+** fix "Seperator" - use pathJoin
+** use copyFile instead of "cp"
+
 * misc
-** setup test suite to run on --push?
 ** Possibly create a (native?) zib library?
 ** port code to windows
-** test / port code for Hugs and nhc
 ** ./Setup.lhs build for nhc
 ** nhc-pkg (see old package manager code)
 ** hugs-pkg
 ** better command-line parsing interface
 ** ./Setup.lhs bdist
 
+* testing
+** count errors and output.
+** setup test suite to run on --push?
+** redirect non-hunit outputs to a file?
+** test / port code for Hugs and nhc
+
 * Code
+** FIX: does it try to register when we have "install --inst-prefix"?
+   (write test case)
 ** FIX: install currently moves .hs, .hi, and .o files for any target.
    make it do the right thing for hugs (just move .hs) and {g,n}hc
    (move .hi and .o)
