added HUnit test/example
** added some parsing of build-dep, so we could get some kind of dependency to the package stuff.  see TODO item
** assertCmd to simplify testing
** added test case basically like this:
make semiclean
./setup configure --prefix=",tmp"
./setup build
./setup install --user
ghc -package-conf $HOME/.ghc-packages  -package HUnit-1.0 HUnitTester.hs -o ./hunitTest
./hunitTest 
ghc-pkg --config-file=$HOME/.ghc-packages -r HUnit-1.0
make clean


20040615024652-6d90f-96bdf2dd7fba70a1f925b85fe8aac412c8240391.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -19,6 +19,9 @@
 ** test / port code for Hugs and nhc
 
 * Code
+
+** buildDepToDep in Configure doesn't set version dependency.
+
 ** Extensions -> flags interface (Misc.hs)
 
 ** Change mainModules to [(String, String)] for (Module, executable name)
