cleaned up use of ~/.ghc-packages
20040619205204-6d90f-5019a79b3627423f242ce6618c6a818d109faf71.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,7 +1,7 @@
 * misc
 ** make a library from the FileUtils, look at Python's os.path.
 ** add en.wikipedia.org/wiki/Cabal to web page
-** clean up ~/.ghc-packages location...
+** if the configure with --user make sure it installs with --user!
 ** Possibly create a (native?) zib library?
 ** port code to windows
 ** ./Setup.lhs build for nhc
