More parsing for required fields
** Changed 'package' field to be empty identifier
** Implemented multiple field parsing (works for version, name, license)
** implemented version parsing
** STILL have not got parseFreeText to stop correctly
** more testing

20040629051241-6d90f-548ee96e53b92c0f634d6b0399827e25e128986a.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,5 +1,5 @@
 * misc
-** version parser is probably too greedy.
+** license parser parses either known strings, or a filename.
 ** Possibly create a (native?) zlib library?
 ** port code to windows
 ** ./Setup.lhs build for nhc
