clean target. needs some work.
-- |FIX: Doesn't remove directories created.  Perhaps it should just
-- delete the .hi and .o files?  Perhaps it should just delete the
-- entire build location recursively?

20040709045603-6d90f-f8d7edaf9f1fa32f961f85e802ea050d88fa790e.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,4 +1,5 @@
 * misc
+** clean target
 ** license parser parses either known strings, or a filename.
 ** Possibly create a (native?) zlib library?
 ** port code to windows
