made test cases work
- new Setup.distribution for A
- make clean && make for A in moduleTest
- Setup.hs -> Setup.lhs, just because

20040714013159-6d90f-9b09c8f30f7a58b53482f2cb8d1e2ee5afd6e80c.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,4 +1,6 @@
 * priorities
+** Extension
+- constructorless data-types
 ** Change mainModules to [(String, String)] for (Module, executable
    name)
 ** Build executables for mainModules
