mostly changed showPackageId to pkgName.
** I'm not sure why I was encoding the version string into the package
   name for ghc-pkg.  I got rid of this.  Seems to still be happy.

** Had to fix some test cases for this also.

20040714030329-6d90f-808816151ae46669dd1330ae40522d65e65a62b3.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -5,9 +5,10 @@
    name)
 ** Build executables for mainModules
 ** Extensions
-- add as many as possible
 - complain if their use makes the code non-portable
 
+** does clean remove installed-pkg-config and .setup-config or
+   whatever? should the former be a . file?
 ** license parser parses either known strings, or a filename.
 ** port code to windows
 ** ./Setup.lhs build for nhc
