added rm for installed-pkg-config and .setup-config in clean rule.
also changed installed-pkg-config to a dotfile.

20040714035139-6d90f-4575c2626eaa64e7492ad583e6e87b9b246299f3.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -5,8 +5,8 @@
 - constructorless data-types
 ** grep for "FIX"
 ** does clean remove installed-pkg-config and .setup-config or
-   whatever? should the former be a . file?  should it be removed
-   after successful register?
+   whatever? 
+** should .installed-pkg-config be removed after successful register?
 ** Clean up field parsers (Martin: what else goes here?)
 *** license parser parses either known strings, or a filename.
 ** add "clean" to doc?
