fixed up some makefile stuff and added build-depend to cabal
20040721203727-6d90f-786331b02d09d838927fef2a1c191f145ee96cb1.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -3,6 +3,7 @@
 ** Extensions
 - complain if their use makes the code non-portable?
 - constructorless data-types
+- parsing for the options isn't yet implemented?
 ** grep for "FIX"
 ** does clean remove installed-pkg-config and .setup-config or
    whatever? 
