--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -5,7 +5,7 @@
 ** Extensions
 - complain if their use makes the code non-portable?
 - constructorless data-types
-** clean up "make install"
+- integrate suggestions from libraries@
 ** grep for "FIX"
 ** does clean remove installed-pkg-config and .setup-config or
    whatever? 
@@ -15,6 +15,8 @@
 ** add "clean" to doc?
 ** add description file format to doc.
 ** Change name of Setup.description?
+** the ./setup -h output should document which commands exist, and
+   which options are relevant to which commands.
 
 * 1.0 
 ** HC-PKG (see "Depends on HC-PKG" below)
