fixed bug where we ignored hsSourceDir
20040722205542-6d90f-5660811251286afd992d4f86f40935e4174a49b9.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,7 +1,7 @@
 * 0.1
-** Build executables for mainModules
 ** if library is Nothing, then don't build the library. sanity check
    for both library and executables == nothing.
+*** add test case for no libraries
 ** Extensions
 - complain if their use makes the code non-portable?
 - constructorless data-types
