Clean up parser and add Compat.H98
20040726161100-153e8-02eb7324815e1859f7890d6da833c3f57c69c079.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -10,7 +10,11 @@ RC:
 ** Look over rest of TODO list.  Should anything be promoted?
 
 HIGH: 
-** Clean up field parsers (Martin: what else goes here?)
+** Clean up field parsers:
+ - parseOption: Which characters are valid for arbitrary options
+    to the compilers? Yuck, that could be anything. Maybe we should
+    have a parseAnything function, that accepts anything that isn't
+    space or comma...
 
 LOW
 ** clean 
